--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Zakirrbr</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -12,26 +12,24 @@
 
 <div class="container">
 	<div class="container text-center">
-  <h3>THE BAND</h3>
-  <p><em>We love music!</em></p>
-  <audio controls>
-  <source src="Jannat She To Khuji Na [Songsx.Pk].mp3" type="audio/ogg">
-  <source src="horse.mp3" type="audio/mpeg">
-</audio>
+		<h3>THE Music</h3>
+		<p><em>love music Love U!</em></p>
+		<audio controls>
+			<source src="audio/Jannat She To Khuji Na [Songsx.Pk].mp3" type="audio/ogg">
+			<source src="horse.mp3" type="audio/mpeg">
+		</audio>
 
-</div>
-  <h1>Hello Tazul!</h1>
-   
-  <p>Tazul Vai Valo kra kj Krn.</p>
+	</div>
+  <h1>Hi! learn with deep heart</h1>
+     <p>Hi! Done your work for all</p>
   
   <div class="row">
-    <div class="col-sm-4" style="background-color:lavender;">.<img src="tz.png" class="img-circle" alt="Cinque Terre" width="304" height="236"> </div>
-    <div class="col-sm-4" style="background-color:lavenderblush;">.<img src="tz.png" class="img-circle" alt="Cinque Terre" width="304" height="236"> </div>
-    <div class="col-sm-4" style="background-color:lavender;">.<img src="tz.png" class="img-circle" alt="Cinque Terre" width="304" height="236"> </div>
-	
+    <div class="col-sm-4" style="background-color:lavender;">.<img src="images/tz.png" class="img-circle" alt="Cinque Terre" width="304" height="236"> </div>
+    <div class="col-sm-4" style="background-color:lavenderblush;">.<img src="images/tz.png" class="img-circle" alt="Cinque Terre" width="304" height="236"> </div>
+    <div class="col-sm-4" style="background-color:lavender;">.<img src="images/tz.png" class="img-circle" alt="Cinque Terre" width="304" height="236"> </div>
   </div>
-  <h2>Pagination - Active State</h2>
-  <p>Add class .active to let the user know which page he/she is on:</p>
+  <h2>Hi! world you are looking nice</h2>
+  <p>I want to love as like you, I want saty forever for you:</p>
   <ul class="pagination">
     <li><a href="#">1</a></li>
     <li class="active"><a href="#">2</a></li>
@@ -41,11 +39,11 @@
   </ul>
 </div>
 <div>
-   <h2>Basic Modal Example</h2>
+   <h2>Go on by Love</h2>
   <!-- Trigger the modal with a button -->
   <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
 
-  <!-- Modal -->
+  <!-- Zakirrbr -->
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
     
@@ -56,15 +54,15 @@
           <h4 class="modal-title">Modal Header</h4>
         </div>
         <div class="modal-body">
-          <p>HI HI HI HI HI U DOM</p>
-		  <img src="slider.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
-		  <ul class="pagination">
-    <li><a href="#">1</a></li>
-    <li class="active"><a href="#">2</a></li>
-    <li><a href="#">3</a></li>
-    <li><a href="#">4</a></li>
-    <li><a href="#">5</a></li>
-  </ul>
+          <p>HI HI HI HI HI U R My......................</p>
+		  <img src="images/slider.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
+			<ul class="pagination">
+			<li><a href="#">1</a></li>
+			<li class="active"><a href="#">2</a></li>
+			<li><a href="#">3</a></li>
+			<li><a href="#">4</a></li>
+			<li><a href="#">5</a></li>
+			</ul>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -73,10 +71,11 @@
       
     </div>
   </div>
+	<ul class="pager">
+		<li class="previous"><a href="#">Previous</a></li>
+		<li class="next"><a href="#">Next</a></li>
+	</ul> 
 </div>
- <ul class="pager">
-  <li class="previous"><a href="#">Previous</a></li>
-  <li class="next"><a href="#">Next</a></li>
-</ul> 
+	
 </body>
 </html> 
