--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<h3>THE Music</h3>
 		<p><em>love music Love U!</em></p>
 		<audio controls>
-			<source src="http://convert2mp3.net/en/index.php?p=tags&id=youtube_7izt614wtgI&key=tu6aWgTkmdOz.mp3" type="audio/ogg">
+			<source src="http://convert2mp3.net/en/index.php?p=tags&id=youtube_7izt614wtgI&key=tu6aWgTkmdOz" type="audio/ogg">
 			<source src="horse.mp3" type="audio/mpeg">
 		</audio>
 
